This revision eliminates the debugging output messages from the previous commit.
The following classes were modified:

M    src/edu/rice/cs/javalanglevels/TypeChecker.java
M    src/edu/rice/cs/javalanglevels/SpecialTypeChecker.java
M    src/edu/rice/cs/javalanglevels/Data.java
M    src/edu/rice/cs/javalanglevels/VariableData.java
M    src/edu/rice/cs/javalanglevels/BodyBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/BodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/ClassBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/IntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/LanguageLevelConverter.java
M    src/edu/rice/cs/javalanglevels/ClassBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/FullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/ExpressionTypeChecker.java
M    src/edu/rice/cs/javalanglevels/BodyBodyIntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/ConstructorBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/LanguageLevelVisitor.java
M    src/edu/rice/cs/javalanglevels/ElementaryLevelTest.java
M    src/edu/rice/cs/javalanglevels/ClassBodyIntermediateVisitor.java


git-svn-id: file:///tmp/test-svn/trunk@5390 fe72c1cf-3628-48e9-8b72-1c46755d3cff